[gd_scene load_steps=5 format=3 uid="uid://b6ctqg48hdwsc"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_ajytn"]
[ext_resource type="Script" uid="uid://484icognpc0k" path="res://components/TO_BE_SORTED/TimePicker/TimePicker.gd" id="2_xt5hv"]
[ext_resource type="Texture2D" uid="uid://3r1jb0q1v7ri" path="res://assets/icons/AdvancedTime.svg" id="3_r8rqh"]
[ext_resource type="Texture2D" uid="uid://gntqv7ddcqvv" path="res://assets/icons/Fade.svg" id="4_gydd8"]

[node name="TimerPicker" type="PanelContainer"]
offset_bottom = 40.0
theme = ExtResource("1_ajytn")
script = ExtResource("2_xt5hv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Tap" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_r8rqh")

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_constants/minimum_character_width = 2
text = "0"
expand_to_text_length = true
right_icon = ExtResource("4_gydd8")

[connection signal="pressed" from="HBoxContainer/Tap" to="." method="_on_tap_pressed"]
[connection signal="gui_input" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
